[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securenet_env"
version = "1.0.0"
description = "SOC Simulation Environment"
authors = [{ name = "Author" }]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[project.scripts]
server = "server.app:main"
